# giflzw

./: Cargo.toml  README.md
benches/: comparison.rs
src/: decode.rs  decoder.rs  error.rs  lib.rs
