[package]
name = "giflzw"
description = "No-std lzw decoder designed specifically for gifs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version= "1.10.0", features = []}



[[bench]]
name = "comparison"
harness = false


[dev-dependencies]
weezl = "0.1.7"
tinybmp = "0.3.3"
embedded-graphics = "0.7"
criterion = "0.3.5"
pprof = { version = "0.11", features = ["flamegraph"] }

